--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -14,6 +14,7 @@
         android:text="Location "
         android:id="@+id/locationText"
         android:textSize="18sp"
+        android:layout_marginTop="5dp"
         android:textColor="@android:color/white"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -24,7 +25,7 @@
         android:id="@+id/datetimetext"
         android:layout_below="@+id/locationText"
         android:textSize="15sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:textColor="@android:color/white"
         android:text="Date/Time"/>
 
@@ -152,7 +153,7 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:id="@+id/locationEditText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -164,11 +165,11 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:id="@+id/searchImage"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:src="@drawable/search"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:layout_alignTop="@+id/locationText"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
