--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -37,13 +37,13 @@
         android:textSize="90sp"
         android:textColor="@android:color/white"
         android:id="@+id/temperatureText"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/weatherImage"
         android:layout_centerHorizontal="true" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/imageView"
+        android:id="@+id/weatherImage"
         android:src="@drawable/light_rain"
         android:layout_below="@+id/datetimetext"
         android:layout_centerHorizontal="true" />
