--- a/app/src/main/res/xml/weather_widget_info.xml
+++ b/app/src/main/res/xml/weather_widget_info.xml
@@ -2,7 +2,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
                     android:minWidth="250dp"
                     android:minHeight="110dp"
-                    android:updatePeriodMillis="86400000"
+                    android:updatePeriodMillis="3000"
                     android:previewImage="@drawable/example_appwidget_preview"
                     android:initialLayout="@layout/weather_widget"
                     android:resizeMode="horizontal|vertical"
