--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -1,11 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android1="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
-    android:background="#011f4b"
-    tools:context="com.navneet.photochat.MainActivity$PlaceholderFragment" >
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:android1="http://schemas.android.com/apk/res/android"
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:background="#011f4b"
+                tools:context="com.navneet.photochat.MainActivity$PlaceholderFragment">
 
     <TextView
         android:layout_width="wrap_content"
@@ -191,4 +192,15 @@
         android:layout_alignTop="@+id/locationText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/ad"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        android:layout_height="wrap_content">
+
+    </com.google.android.gms.ads.AdView>
 </RelativeLayout>
