--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -4,7 +4,9 @@
                 xmlns:ads="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
                 android:background="#011f4b"
                 tools:context="com.navneet.photochat.MainActivity$PlaceholderFragment">
 
@@ -196,11 +198,11 @@
     <com.google.android.gms.ads.AdView
         android:id="@+id/ad"
         android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
-        android:layout_height="wrap_content">
+        ads:adUnitId="ca-app-pub-9247077570886602/2039993973"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
 
     </com.google.android.gms.ads.AdView>
 </RelativeLayout>
