--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,26 @@
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="#011f4b"
+    xmlns:ads="http://schemas.android.com/apk/res-auto">
+
 <android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:id="@+id/calibPager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-  />
+    android:layout_height="fill_parent"
+    android:layout_above="@+id/ad"/>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/ad"
+        android:layout_width="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-9247077570886602/2039993973"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+    </com.google.android.gms.ads.AdView>
+
+</RelativeLayout>
