--- a/app/src/main/res/layout/activity_widget_location.xml
+++ b/app/src/main/res/layout/activity_widget_location.xml
@@ -2,6 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
@@ -26,12 +27,25 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
-    <ImageButton
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/current"
+        android:id="@+id/currentLocationImageWidget"
+        android:src="@drawable/current_location"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
+
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/widgetAd"
+        android:layout_width="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-9247077570886602/5381909977"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+    </com.google.android.gms.ads.AdView>
 
 
 </RelativeLayout>
