Changed weather service

--- a/app/src/main/res/layout/activity_widget_location.xml
+++ b/app/src/main/res/layout/activity_widget_location.xml
@@ -14,16 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/locationEdiTextWidget"
+        android:textColor="@android:color/white"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/searchImageWidget"
         android:src="@drawable/search"
-        android:layout_alignParentTop="true"
+               android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
