--- a/app/src/main/res/layout/activity_widget_location.xml
+++ b/app/src/main/res/layout/activity_widget_location.xml
@@ -8,7 +8,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:background="#011f4b"
-                tools:context="com.teenvan.stormy.Widgets.WidgetLocationActivity">
+                tools:context="com.teenvan.stormypro.Widgets.WidgetLocationActivity">
 
     <EditText
         android:layout_width="match_parent"
