--- a/app/src/main/res/menu/menu_widget_location.xml
+++ b/app/src/main/res/menu/menu_widget_location.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.teenvan.stormy.Widgets.WidgetLocationActivity">
+      tools:context="com.teenvan.stormypro.Widgets.WidgetLocationActivity">
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
